5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1685_2167.log
== TEST (2019-05-19 20:34:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = float(input("digite percurso: "))

if (percurso == "ida"):
	if(destino == "Belem"):
		passagem = 350.00
	elif(destino == "Borba"):
		passagem = 80.00
	elif(destino == "Coari"):
		passagem = 106.00
	elif(destino == "Humaita"):
		passagem = 200.00
	elif(destino == "Manicore"):
		passagem = 150.00
	elif(destino == "Maues"):
		passagem = 100.00
elif(destino == "ida-e-volta"):
	if(destino == "Belem"):
		passagem = 650.00
	elif(destino == "Borba"):
		passagem = 152.00
	elif(destino == "Coari"):
		passagem = 199.00
	elif(destino == "Humaita"):
		passagem = 390.00
	elif(destino == "Manicore"):
		passagem = 280.00
	elif(destino == "Maues"):
		passagem = 190.00
else:
	print("Destino inexistente")
	
				
				
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    percurso = float(input())
ValueError: could not convert string to float: 'ida'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:34:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if (percurso == "ida"):
	if(destino == "Belem"):
		passagem = 350.00
	elif(destino == "Borba"):
		passagem = 80.00
	elif(destino == "Coari"):
		passagem = 106.00
	elif(destino == "Humaita"):
		passagem = 200.00
	elif(destino == "Manicore"):
		passagem = 150.00
	elif(destino == "Maues"):
		passagem = 100.00
elif(destino == "ida-e-volta"):
	if(destino == "Belem"):
		passagem = 650.00
	elif(destino == "Borba"):
		passagem = 152.00
	elif(destino == "Coari"):
		passagem = 199.00
	elif(destino == "Humaita"):
		passagem = 390.00
	elif(destino == "Manicore"):
		passagem = 280.00
	elif(destino == "Maues"):
		passagem = 190.00
else:
	print("Destino inexistente")
	
				
				
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    percurso = float(input())
ValueError: could not convert string to float: 'ida'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:35:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if (percurso == "ida"):
	if(destino == "Belem"):
		passagem = 350.00
	elif(destino == "Borba"):
		passagem = 80.00
	elif(destino == "Coari"):
		passagem = 106.00
	elif(destino == "Humaita"):
		passagem = 200.00
	elif(destino == "Manicore"):
		passagem = 150.00
	elif(destino == "Maues"):
		passagem = 100.00
elif(destino == "ida-e-volta"):
	if(destino == "Belem"):
		passagem = 650.00
	elif(destino == "Borba"):
		passagem = 152.00
	elif(destino == "Coari"):
		passagem = 199.00
	elif(destino == "Humaita"):
		passagem = 390.00
	elif(destino == "Manicore"):
		passagem = 280.00
	elif(destino == "Maues"):
		passagem = 190.00
else:
	print("Destino inexistente")
	
				
				
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    percurso = float(input())
ValueError: could not convert string to float: 'ida'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:36:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if (percurso == "ida"):
	if(destino == "Belem"):
		passagem = 350.00
	elif(destino == "Borba"):
		passagem = 80.00
	elif(destino == "Coari"):
		passagem = 106.00
	elif(destino == "Humaita"):
		passagem = 200.00
	elif(destino == "Manicore"):
		passagem = 150.00
	elif(destino == "Maues"):
		passagem = 100.00
elif(destino == "ida-e-volta"):
	if(destino == "Belem"):
		passagem = 650.00
	elif(destino == "Borba"):
		passagem = 152.00
	elif(destino == "Coari"):
		passagem = 199.00
	elif(destino == "Humaita"):
		passagem = 390.00
	elif(destino == "Manicore"):
		passagem = 280.00
	elif(destino == "Maues"):
		passagem = 190.00
else:
	print("Destino inexistente")
	
print(passagem)
	
				
				
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print(passagem)
NameError: name 'passagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:36:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if (percurso == "ida"):
	if(destino == "Belem"):
		passagem = 350.00
	elif(destino == "Borba"):
		passagem = 80.00
	elif(destino == "Coari"):
		passagem = 106.00
	elif(destino == "Humaita"):
		passagem = 200.00
	elif(destino == "Manicore"):
		passagem = 150.00
	elif(destino == "Maues"):
		passagem = 100.00
elif(destino == "ida-e-volta"):
	if(destino == "Belem"):
		passagem = 650.00
	elif(destino == "Borba"):
		passagem = 152.00
	elif(destino == "Coari"):
		passagem = 199.00
	elif(destino == "Humaita"):
		passagem = 390.00
	elif(destino == "Manicore"):
		passagem = 280.00
	elif(destino == "Maues"):
		passagem = 190.00
else:
	print("Destino inexistente")
	
print(passagem)
	
				
				
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print(passagem)
NameError: name 'passagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:42:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
	else:
		print("Destino inexistente")
if(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
	else:
		print("Destino inexistente")
if(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
	else:
		print("Destino inexistente")
if(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
	else:
		print("Destino inexistente")
if(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
	else:
		print("Destino inexistente")
if(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
	else:
		print("Destino inexistente")
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print(passagem)
NameError: name 'passagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:42:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
	else:
		print("Destino inexistente")
if(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
	else:
		print("Destino inexistente")
if(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
	else:
		print("Destino inexistente")
if(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
	else:
		print("Destino inexistente")
if(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
	else:
		print("Destino inexistente")
if(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
	else:
		print("Destino inexistente")
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print(passagem)
NameError: name 'passagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:43:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
	else:
		print("Destino inexistente")
if(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
	else:
		print("Destino inexistente")
if(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
	else:
		print("Destino inexistente")
if(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
	else:
		print("Destino inexistente")
if(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
	else:
		print("Destino inexistente")
if(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
	else:
		print("Destino inexistente")
				
				
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print(passagem)
NameError: name 'passagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:44:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
elif(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
elif(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
elif(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
elif(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
elif(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
else:
	print("Destino inexistente")
				
				
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 20:44:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
elif(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
elif(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
elif(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
elif(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
elif(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
else:
	print("Destino inexistente")
				
				
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-19 20:44:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
destino = input("digite cidade: ")
percurso = input("digite percurso: ")

if(destino == "Belem"):
	if (percurso == "ida"):
		print("350.00")
	elif(percurso == "ida-e-volta"):
		print("650.00")
elif(destino == "Borba"):
	if (percurso == "ida"):
		print("80.00")
	elif(percurso == "ida-e-volta"):
		print("152.00")
elif(destino == "Coari"):
	if (percurso == "ida"):
		print("106.00")
	elif(percurso == "ida-e-volta"):
		print("199.00")
elif(destino == "Humaita"):
	if (percurso == "ida"):
		print("200.00")
	elif(percurso == "ida-e-volta"):
		print("390.00")
elif(destino == "Manicore"):
	if (percurso == "ida"):
		print("150.00")
	elif(percurso == "ida-e-volta"):
		print("280.00")
elif(destino == "Maues"):
	if (percurso == "ida"):
		print("100.00")
	elif(percurso == "ida-e-volta"):
		print("190.00")
else:
	print("Destino inexistente")
				
				
-- EXECUTION TIME:
0.213181
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.00
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.00
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
